--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 #input {
   text-align: center;
 }
+#time {
+				color: #7a000f
+}
 h1 {
   display: inline-block;
   font-size: 10em;
@@ -15,7 +18,7 @@ h1 {
 }
 section {
   padding: 5%;
-  background-color: rgb(3, 3, 3);
+  background-color: #7a000f;
   margin-left: auto;
   margin-right: auto;
   width: 80%;
